# siddhi-llvm-benchmarks

./: README.md
AsyncBufferBenchmark/FilterBenchmark/: BenchmarkTest.cpp  BenchmarkTest.h  BufferContainer.h  BufferLocker.h  CMakeLists.txt  DetailContainer.h  Executor.cpp  Executor.h  ExecutorCreator.cpp  ExecutorCreator.h  InputOutputMapper.h  Main.cpp  PerformanceMonitor.cpp  PerformanceMonitor.h  ProcessedThreadHandler.cpp  ProcessedThreadHandler.h  WindowBufferContainer.cpp  WindowBufferContainer.h  common.h
AsyncBufferBenchmark/PassthroughBenchmark/: Buffer.h  BufferContainer.cpp  BufferLocker.cpp  DetailContainer.cpp  ExecutorCreator.cpp  LogicExecution.h  OutputEmitter.cpp  OutputEmitter.h
AsyncThreadPoolBenchmark/FilterBenchmark/: Benchmark.h  InputHandler.cpp  LengthWindow.cpp  LengthWindow.h  Processor.h  StreamProcessor.cpp  TimeWindow.cpp  main.cpp
AsyncThreadPoolBenchmark/LengthWindowBenchmark/: Benchmark.cpp  Buffer.cpp  Data.h  OutputEmitter.cpp  (+2 more)
EsperBenchmark/: pom.xml
SiddhiBenchmark/: pom.xml
SyncBenchmark/PassthroughBenchmark/: BenchmarkTest.cpp  CMakeLists.txt  Listener.h  ListenerImpl.h  PerformanceMonitor.cpp  TestTime.cpp  TestTime.h
passthrough/siddhi-llvm/Generated_SP/: BenchMarkTesting.cpp  BenchMarkTesting.h  CMakeLists.txt  CargoStream.cpp  CargoStream.h  Data.h  DataGenerator.cpp  DataGenerator.h  Execution.cpp  Execution.h  OutputStream.cpp  OutputStream.h  a.out  common.h  main.cpp
passthrough/siddhi-llvm/Generated_SP/llvm files/: CargoStream.ll  Execution.ll  KafkaConsumer.ll  OutputStream.ll  final.ll  main.ll
(+50 files in other folders)
